Fixed button alignment issues.

--- a/src/_buttons.css
+++ b/src/_buttons.css
@@ -19,7 +19,8 @@ button {
   cursor: pointer;
   /* display: inline-block; */
   display: inline-flex;
-  align-items: center;
+  place-content: center;
+  place-items: center;
 }
 
 .button+.button {
